--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,14 @@ set(CMAKE_CXX_STANDARD 20)
 add_subdirectory(src)
 add_executable(main main.cpp)
 add_executable(visual visual.cpp)
+add_executable(map map.cpp)
+add_executable(BresenHam BresenHamTest.cpp)
 
 target_link_libraries(main PUBLIC lib)
 target_link_libraries(visual PUBLIC lib)
+target_link_libraries(map PUBLIC lib)
+target_link_libraries(BresenHam PUBLIC lib)
+
 #target_include_directories(SLAM PRIVATE "${Open3D_INCLUDE_DIR}" "${Open3D_INCLUDE_DIR}/open3d/3rdparty")
 #
 #if (WIN32)
